# AI-Doc-Editor

./: .dockerignore  .editorconfig  .env.example  .eslintcache  .eslintignore  .eslintrc-legacy.json  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .mega-linter.yml  .mega-linter.yml.backup  .npmrc  .npmrc.ci  .prettierignore  .pylintrc  .semgrepignore  .spectral.yml  .tsbuildinfo-check  .yamllint  .yarnrc  .yarnrc.yml  CLAUDE.md  CONTRIBUTING-UPDATES-SUMMARY.md  Dockerfile  Dockerfile.dev  MIGRATION-QUICK-REF.md  Makefile  QA_CLEANUP_REPORT.md  R0.WP1_IMPLEMENTATION_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  T-02-BUILD-INSTRUCTIONS.md  current-work.md  cypress.config.ts  debug-fast-mode.js  dependency-report.json  docker-build-execute.sh  docker-compose.yml  eslint-report.txt  eslint-results.json  (+23 more)
backend/: .complexity.yml  COMPLEXITY_EXCEPTIONS.md  Dockerfile  Dockerfile.dev  alembic.ini  create_test_db.py  pyproject.toml  pytest-dev.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  ruff-report.json  test_5_second_audit.py  test_backend.py  test_credentials.py  validate_oauth_security.py  validate_security.py
backend/app/: __init__.py  main.py
backend/app/core/: base_crud.py  base_request_utils.py  base_security.py  base_validators.py  config.py
backend/app/db/: session.py
backend/app/middleware/: audit_action_detector.py  audit_middleware.py  audit_resource_utils.py
backend/app/models/: __init__.py  audit.py  audit_schemas.py  auth.py  config.py  document.py  document_schemas.py  key_management.py  search_schemas.py  upload_schemas.py
backend/app/routers/: __init__.py  audit.py  auth.py  config.py  credentials.py  documents.py  health.py  key_management.py  upload.py  vector_search.py
backend/app/security/: T12_IMPLEMENTATION_SPEC.md  T12_ROADMAP.md  audit_security.py  oauth_monitoring.py  oauth_security.py  rate_limiter.py  secure_logging.py
backend/app/services/: audit.py  audit_queries.py  audit_service_utils.py  auth.py  config.py  credentials.py  embedding_service.py  file_validator.py  text_chunker.py  text_extractor.py  upload_service.py  vector_store_service.py
backend/docs/: README.md
backend/docs/architecture/: T04-ST1-UPLOAD-ARCHITECTURE.md  T04-ST2-TEXT-EXTRACTION-ARCHITECTURE.md
backend/docs/database/: key-management-migrations.md
backend/docs/research/: DOCLING-EVALUATION.md
backend/docs/security/: README.md  docker-security-validation.md
backend/docs/testing/: MOCK_CONFIGURATION_GUIDE.md  README.md  T04-ST5-INGEST-BENCHMARK.md
backend/migrations/: env.py
backend/migrations/versions/: 001_create_system_configurations.py  002_create_audit_logs.py  003_optimize_audit_indexes.py  004_create_key_management_system.py  005_optimize_key_management_performance.py  006_create_documents_table.py
backend/performance/: T04-ST5-INGEST-BENCHMARK.md  T04-ST6-SEARCH-BENCHMARK.md  locust_ingest_benchmark.py  locustfile_ingest.py  locustfile_search.py
backend/scripts/database/: create_test_db.py
backend/scripts/security/: validate_oauth_security.py  validate_security.py
backend/tests/: conftest.py  test_audit_integration.py  test_audit_performance.py  test_audit_security.py  test_config_api.py
backend/tests/fixtures/: audit_fixtures.py
backend/tests/integration/: README.md  __init__.py  conftest.py  test_backend.py  test_complete_t12_integration.py  test_credentials.py  test_documents.py  test_embedding_service.py  test_key_management_api_integration.py  (+5 more)
(+1118 files in other folders)
